# Digital-analysis-of-fingerprints

./: README.md
Optimization/: CMakeLists.txt  doxy-convert.conf
Optimization/Output/: gradient_descent.txt  loss_rotation.txt  loss_x.txt  loss_xy.txt
Optimization/include/: img3.h  loss3.h
Optimization/src/: functions.py  img3.cpp  loss3.cpp  main3.cpp  plot.py
Restauration/: CMakeLists.txt
Restauration/include/: img2.h  utils2.h
Restauration/src/: img2.cpp  main2.cpp  utils2.cpp
Rotation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  rotation
Rotation/include/: MLS.hpp  rotation.hpp  warp.hpp
Rotation/src/: MLS.cpp  main.cpp  main_starter.cpp  rotation.cpp  warp.cpp
Simulation/: CMakeLists.txt
Simulation/include/: img.h  utils.h
Simulation/src/: img.cpp  main.cpp  utils.cpp
starter_1/: CMakeLists.txt
starter_1/include/: img.h
starter_1/src/: img.cpp  main.cpp
